--- a/HotelManagement/HotelManagement.csproj
+++ b/HotelManagement/HotelManagement.csproj
@@ -174,6 +174,7 @@
     <Compile Include="Areas\Admin\Controllers\GuestController.cs" />
     <Compile Include="Areas\Admin\Controllers\HomeController.cs" />
     <Compile Include="Areas\Admin\Controllers\InvoiceController.cs" />
+    <Compile Include="Areas\Admin\Controllers\RegistrationFormController.cs" />
     <Compile Include="Areas\Admin\Controllers\RoomController.cs" />
     <Compile Include="Areas\Admin\Controllers\RoomTypeController.cs" />
     <Compile Include="Areas\Admin\Controllers\ServiceController.cs" />
@@ -2211,6 +2212,11 @@
     <Content Include="Model.edmx.diagram">
       <DependentUpon>Model.edmx</DependentUpon>
     </Content>
+    <Content Include="Areas\Admin\Views\RegistrationForm\Create.cshtml" />
+    <Content Include="Areas\Admin\Views\RegistrationForm\Delete.cshtml" />
+    <Content Include="Areas\Admin\Views\RegistrationForm\Details.cshtml" />
+    <Content Include="Areas\Admin\Views\RegistrationForm\Edit.cshtml" />
+    <Content Include="Areas\Admin\Views\RegistrationForm\Index.cshtml" />
     <None Include="Scripts\jquery-3.4.1.intellisense.js" />
     <Content Include="Scripts\jquery-3.4.1.js" />
     <Content Include="Scripts\jquery-3.4.1.min.js" />
